Fix a style bug caused by the insertion of the theme-popup div inside font awesome icon <i>
The div is now inserted after the <i>, the text color has also been changed to the foreground color and the "(default)" text that indicates the default theme is now grey to contrast with the theme name

Fixes #97

--- a/src/theme/stylus/theme-popup.styl
+++ b/src/theme/stylus/theme-popup.styl
@@ -1,6 +1,6 @@
 .theme-popup {
-    position: fixed
-    left: -40px
+    position: relative
+    left: 10px
 
     border-radius: 4px
     font-size: 0.7em
