--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -61,10 +61,13 @@
     }
 
     .theme-popup {
+        color: $fg
         background: $theme-popup-bg
         border: 1px solid $theme-popup-border
 
         .theme:hover { background-color: $theme-hover }
+
+        .default { color: $icons }
     }
 
     blockquote {
