Style tables, different header bg, alternate row color and border

--- a/src/theme/stylus/general.styl
+++ b/src/theme/stylus/general.styl
@@ -22,7 +22,14 @@ h4, h5 { margin-top: 2em }
 
 table {
     margin: 0 auto;
+    border-collapse: collapse;
 
-    thead td { font-weight: 700; }
-    td { padding: 3px 20px; }
+    td {
+      padding: 3px 20px;
+      border: 1px solid;
+    }
+
+    thead {
+      td { font-weight: 700; }
+    }
 }
