--- a/src/theme/stylus/themes/light.styl
+++ b/src/theme/stylus/themes/light.styl
@@ -21,4 +21,8 @@ $theme-hover = #e6e6e6
 $quote-bg = #f2f7f9
 $quote-border = darken($quote-bg, 5%)
 
+$table-border-color = darken($bg, 5%)
+$table-header-bg = darken($bg, 20%)
+$table-alternate-bg = darken($bg, 3%)
+
 @import 'base'
