--- a/src/theme/stylus/themes/navy.styl
+++ b/src/theme/stylus/themes/navy.styl
@@ -21,4 +21,8 @@ $theme-hover = #282e40
 $quote-bg = #262933
 $quote-border = lighten($quote-bg, 5%)
 
+$table-border-color = lighten($bg, 5%)
+$table-header-bg = lighten($bg, 20%)
+$table-alternate-bg = lighten($bg, 3%)
+
 @import 'base'
