--- a/src/theme/stylus/themes/rust.styl
+++ b/src/theme/stylus/themes/rust.styl
@@ -21,4 +21,8 @@ $theme-hover = #99908a
 $quote-bg = #c1c1bb
 $quote-border = darken($quote-bg, 5%)
 
+$table-border-color = darken($bg, 5%)
+$table-header-bg = #b3a497
+$table-alternate-bg = darken($bg, 3%)
+
 @import 'base'
