Add description config option

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>{{ title }}</title>
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <meta name="description" content="{% block description %}{% endblock %}">
+        <meta name="description" content="{{ description }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <base href="{{ path_to_root }}">
