Implement Serve feature

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -107,6 +107,9 @@
             }
         </script>
 
+        <!-- Livereload script (if served using the cli tool) -->
+        {{{livereload}}}
+
         <script src="highlight.js"></script>
         <script src="book.js"></script>
     </body>
