--- a/src/theme/stylus/theme-popup.styl
+++ b/src/theme/stylus/theme-popup.styl
@@ -3,7 +3,7 @@
     left: 10px
 
     z-index: 1000;
-    
+
     border-radius: 4px
     font-size: 0.7em
 
@@ -12,7 +12,14 @@
         padding: 2px 10px
         line-height: 25px
         white-space: nowrap
+
+        &:hover:first-child,
+        &:hover:last-child {
+            border-top-left-radius: inherit;
+            border-top-right-radius: inherit;
+        }
     }
+
 }
 
 @media only screen and (max-width: 1250px) {
