--- a/data/_html-template/_layouts/page.hbs
+++ b/data/_html-template/_layouts/page.hbs
@@ -9,27 +9,21 @@
 
         <base href="{{ path_to_root }}">
 
-        <link rel="stylesheet" href="book.css">
+        <link rel="shortcut icon" href="images/favicon.png">
+
+        <link rel="stylesheet" href="css/book.css">
+
+        <!-- TODO use OpenSans from local -->
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
-        <link rel="shortcut icon" href="{{ favicon }}">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/highlight.css">
+        <link rel="stylesheet" href="css/tomorrow-night.css">
 
-        <!-- Font Awesome -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <!-- TODO use MathJax from local -->
+        <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+        <script src="js/jquery-2.1.4.min.js"></script>
 
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-
-        <!-- MathJax -->
-        <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-
-        <!-- Fetch JQuery from CDN but have a local fallback -->
-        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-        <script>
-            if (typeof jQuery == 'undefined') {
-                document.write(unescape("%3Cscript src='jquery.js'%3E%3C/script%3E"));
-            }
-        </script>
     </head>
     <body class="light">
         <!-- Set the theme before any content is loaded, prevents flash -->
@@ -59,12 +53,18 @@
                         <i id="theme-toggle" class="fa fa-paint-brush"></i>
                     </div>
 
+                   <div class="translations">
+                       {{#translations}}{{/translations}}
+                   </div>
+
                     <h1 class="menu-title">{{ title }}</h1>
 
                     <div class="right-buttons">
                         <i id="print-button" class="fa fa-print" title="Print this book"></i>
                     </div>
                 </div>
+
+
 
                 <div id="content" class="content">
                     {{{ content }}}
@@ -99,18 +99,7 @@
 
         </div>
 
-
-        <!-- Local fallback for Font Awesome -->
-        <script>
-            if ($(".fa").css("font-family") !== "FontAwesome") {
-                $('<link rel="stylesheet" type="text/css" href="_FontAwesome/css/font-awesome.css">').prependTo('head');
-            }
-        </script>
-
-        <!-- Livereload script (if served using the cli tool) -->
-        {{{livereload}}}
-
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="js/highlight.js"></script>
+        <script src="js/book.js"></script>
     </body>
 </html>
