--- a/data/_html-template/_stylus/menu.styl
+++ b/data/_html-template/_stylus/menu.styl
@@ -17,18 +17,13 @@
     .right-buttons { float: right }
 }
 
-.menu-title {
-    display: inline-block
+h1.menu-title {
+    float: left
+    margin: 0 0 0 2em
+    padding: 0
     font-weight: 200
     font-size: 20px
     line-height: 50px
-    position: absolute
-    top: 0
-    left: 0
-    right: 0
-    bottom: 0
-    text-align: center
-    margin: 0
 
     opacity: 0
     transition: opacity 0.5s ease-in-out
