watch and serve are back

--- a/data/_html-template/_layouts/page.hbs
+++ b/data/_html-template/_layouts/page.hbs
@@ -99,6 +99,9 @@
 
         </div>
 
+        <!-- Livereload script (if served using the cli tool) -->
+        {{{livereload}}}
+
         <script src="js/highlight.js"></script>
         <script src="js/book.js"></script>
     </body>
