--- a/data/_html-template/_stylus/page.styl
+++ b/data/_html-template/_stylus/page.styl
@@ -54,12 +54,30 @@
     img { max-width: 100%; }
 }
 
-div.translations {
+div.translation-indexes {
+  ul {
+      margin: 10px 0 0 0
+      padding: 0
+      text-align: center
+      list-style-type: none
+      li {
+          display: inline-block
+          padding: 0.2em 0.5em
+          a {
+              text-decoration: none
+              &:hover { text-decoration: underline; }
+          }
+      }
+  }
+}
+
+div.translation-links {
   float: left
   height: 50px
   ul {
       margin: 10px 0 0 0
-      display: inline-block
+      padding: 0 0 0 1em
+      text-align: left
       list-style-type: none
       li {
           display: inline-block
