apply highlightjs style by class on body

--- a/data/_html-template/_stylus/book.styl
+++ b/data/_html-template/_stylus/book.styl
@@ -1,5 +1,6 @@
 @import "nib"
 
+@import 'highlightjs'
 @import 'general'
 @import 'sidebar'
 @import 'page'
@@ -8,3 +9,4 @@
 @import 'theme-popup'
 @import 'themes'
 @import 'print'
+
