--- a/data/_html-template/_stylus/highlightjs-light.styl
+++ b/data/_html-template/_stylus/highlightjs-light.styl
@@ -1,24 +1,19 @@
 /* Modified Base16 Atelier Dune Light - Theme
 /* Original by Bram de Haan (http://atelierbram.github.io/syntax-highlighting/atelier-schemes/dune) */
-
-.hljs {
-  display: block;
-  overflow-x: auto;
-  background: #f1f1f1;
-  color: #6e6b5e;
-  padding: 0.5em;
-  -webkit-text-size-adjust: none;
-}
-
+.hljs
+  display: block
+  overflow-x: auto
+  background: #f1f1f1
+  color: #6e6b5e
+  padding: 0.5em
+  -webkit-text-size-adjust: none
 
 /* Atelier-Dune Comment */
-.hljs-comment {
-  color: #AAA;
-}
+.hljs-comment
+  color: #AAA
 
 /* Atelier-Dune Red */
 .hljs-variable,
-
 .hljs-tag,
 .hljs-regexp,
 .hljs-name,
@@ -29,9 +24,8 @@
 .html .hljs-doctype,
 .css .hljs-id,
 .css .hljs-class,
-.css .hljs-pseudo {
-  color: #d73737;
-}
+.css .hljs-pseudo
+  color: #d73737
 
 /* Atelier-Dune Orange */
 .hljs-number,
@@ -40,30 +34,26 @@
 .hljs-literal,
 .hljs-params,
 .hljs-attribute,
-.hljs-constant {
-  color: #b65611;
-}
+.hljs-constant
+  color: #b65611
 
 /* Atelier-Dune Yellow */
 .ruby .hljs-class .hljs-title,
-.css .hljs-rule .hljs-attribute {
-  color: #ae9513;
-}
+.css .hljs-rule .hljs-attribute
+  color: #ae9513
 
 /* Atelier-Dune Green */
 .hljs-string,
 .hljs-value,
 .hljs-inheritance,
 .ruby .hljs-symbol,
-.xml .hljs-cdata {
-  color: #2a9292;
-}
+.xml .hljs-cdata
+  color: #2a9292
 
 /* Atelier-Dune Aqua */
 .hljs-title,
-.css .hljs-hexcolor {
-  color: #1fad83;
-}
+.css .hljs-hexcolor
+  color: #1fad83
 
 /* Atelier-Dune Blue */
 .hljs-function,
@@ -73,15 +63,13 @@
 .ruby .hljs-title .hljs-keyword,
 .perl .hljs-sub,
 .javascript .hljs-title,
-.coffeescript .hljs-title {
-  color: #6684e1;
-}
+.coffeescript .hljs-title
+  color: #6684e1
 
 /* Atelier-Dune Purple */
 .hljs-keyword,
-.javascript .hljs-function {
-  color: #b854d4;
-}
+.javascript .hljs-function
+  color: #b854d4
 
 .coffeescript .javascript,
 .javascript .xml,
@@ -89,19 +77,16 @@
 .xml .javascript,
 .xml .vbscript,
 .xml .css,
-.xml .hljs-cdata {
-  opacity: 0.5;
-}
+.xml .hljs-cdata
+  opacity: 0.5
 
 /* markdown */
-.hljs-header {
-    color: #A30000;
-}
+.hljs-header
+  color: #A30000
 
-.hljs-link_label {
-    color: #33CCCC;
-}
+.hljs-link_label
+  color: #33CCCC
 
-.hljs-link_url {
-    color: #CC66FF;
-}
+.hljs-link_url
+  color: #CC66FF
+
