--- a/src/tests/book-minimal-with-assets/assets/_html-template/_layouts/page.hbs
+++ b/src/tests/book-minimal-with-assets/assets/_html-template/_layouts/page.hbs
@@ -2,7 +2,7 @@
 <html lang="{{ language }}">
     <head>
         <meta charset="UTF-8">
-        <title>{{ title }}</title>
+        <title>{{ page-title }}</title>
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="{{ description }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,16 +11,11 @@
 
         <link rel="shortcut icon" href="images/favicon.png">
 
-        <link rel="stylesheet" href="css/book.css">
-
-        <!-- TODO use OpenSans from local -->
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
+        <link rel="stylesheet" href="css/book.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/highlight.css">
-        <link rel="stylesheet" href="css/tomorrow-night.css">
 
-        <!-- TODO use MathJax from local -->
         <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
         <script src="js/jquery-2.1.4.min.js"></script>
 
@@ -41,6 +36,10 @@
         </script>
 
         <div id="sidebar" class="sidebar">
+            <div class="translation-indexes">
+                {{#translation-indexes}}{{/translation-indexes}}
+            </div>
+
             {{#toc}}{{/toc}}
         </div>
 
@@ -53,12 +52,18 @@
                         <i id="theme-toggle" class="fa fa-paint-brush"></i>
                     </div>
 
-                    <h1 class="menu-title">{{ title }}</h1>
+                   <div class="translation-links">
+                       {{#translation-links}}{{/translation-links}}
+                   </div>
+
+                    <h1 class="menu-title">{{ page-title }}</h1>
 
                     <div class="right-buttons">
                         <i id="print-button" class="fa fa-print" title="Print this book"></i>
                     </div>
                 </div>
+
+
 
                 <div id="content" class="content">
                     {{{ content }}}
@@ -92,6 +97,9 @@
             {{/next}}
 
         </div>
+
+        <!-- Livereload script (if served using the cli tool) -->
+        {{{livereload}}}
 
         <script src="js/highlight.js"></script>
         <script src="js/book.js"></script>
