link in custom.css if the user has it

--- a/data/_html-template/_layouts/page.hbs
+++ b/data/_html-template/_layouts/page.hbs
@@ -15,6 +15,7 @@
 
         <link rel="stylesheet" href="css/book.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
+        {{#customcss}}{{/customcss}}
 
         <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
         <script src="js/jquery-2.1.4.min.js"></script>
