--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -20,6 +20,14 @@
         <link rel="stylesheet" href="highlight.css">
         <link rel="stylesheet" href="tomorrow-night.css">
 
+        {{#previous}}
+	<link rel="prev" href="{{link}}#content">
+        {{/previous}}
+	
+        {{#next}}
+	<link rel="next" href="{{link}}#content">
+        {{/next}}
+
         <!-- MathJax -->
         <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
