Added monospace font with support for box-drawing chars

--- a/src/theme/stylus/general.styl
+++ b/src/theme/stylus/general.styl
@@ -3,6 +3,11 @@ html, body {
     color: #333
 }
 
+code {
+    font-family: "Source Code Pro", "Menlo", "DejaVu Sans Mono", monospace;
+    font-size: 0.875em;
+}
+
 .left {
     float: left
 }
