--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -111,6 +111,19 @@
         <!-- Livereload script (if served using the cli tool) -->
         {{{livereload}}}
 
+        {{#if google_analytics}}
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', '{{google_analytics}}', 'auto');
+        ga('send', 'pageview');
+        </script>
+      {{/if}}
+
+
         <script src="highlight.js"></script>
         <script src="book.js"></script>
     </body>
