--- a/src/theme/stylus/general.styl
+++ b/src/theme/stylus/general.styl
@@ -4,7 +4,7 @@ html, body {
 }
 
 code {
-    font-family: "Source Code Pro", "Menlo", "DejaVu Sans Mono", monospace;
+    font-family: "Source Code Pro", Consolas, "Ubuntu Mono", Menlo, "DejaVu Sans Mono", monospace, monospace;
     font-size: 0.875em;
 }
 
