Initial implementation of clipboard handling

--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -827,3 +827,22 @@ table thead td {
     word-wrap: break-word /* Internet Explorer 5.5+ */;
   }
 }
+.tooltiptext {
+  visibility: hidden;
+  background-color: #000;
+  color: #fff;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 8px;
+  margin: 5px;
+  left: -250%;
+  bottom: 100%;
+  position: absolute;
+  z-index: 1000;
+}
+.tooltipped .tooltiptext {
+  visibility: visible;
+}
