--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -828,19 +828,22 @@ table thead td {
   }
 }
 .tooltiptext {
+  position: absolute;
   visibility: hidden;
-  background-color: #000;
   color: #fff;
-  opacity: 0.8;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-  filter: alpha(opacity=80);
+  background-color: #333;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%); /* Center by moving tooltip 50% of its width left */
+  left: -8px; /* Half of the width of the icon */
+  top: -35px;
+  font-size: 0.8em;
   text-align: center;
   border-radius: 6px;
   padding: 5px 8px;
   margin: 5px;
-  left: -250%;
-  bottom: 100%;
-  position: absolute;
   z-index: 1000;
 }
 .tooltipped .tooltiptext {
