--- a/src/theme/stylus/tooltip.styl
+++ b/src/theme/stylus/tooltip.styl
@@ -1,15 +1,16 @@
 .tooltiptext {
+  position: absolute;
   visibility: hidden;
-  background-color: black;
   color: #fff;
-  opacity: 0.8;
+  background-color: #333;
+  transform: translateX(-50%);  /* Center by moving tooltip 50% of its width left */
+  left: -8px;   /* Half of the width of the icon */
+  top: -35px;
+  font-size: 0.8em;
   text-align: center;
   border-radius: 6px;
   padding: 5px 8px;
   margin: 5px;
-  left: -250%;
-  bottom: 100%;
-  position: absolute;
   z-index: 1000;
 }
 .tooltipped .tooltiptext {
