--- a/src/theme/stylus/general.styl
+++ b/src/theme/stylus/general.styl
@@ -3,6 +3,10 @@ html, body {
     color: #333
 }
 
+body {
+    margin: 0;
+}
+
 code {
     font-family: "Source Code Pro", Consolas, "Ubuntu Mono", Menlo, "DejaVu Sans Mono", monospace, monospace;
     font-size: 0.875em;
