--- a/src/theme/stylus/themes/ayu.styl
+++ b/src/theme/stylus/themes/ayu.styl
@@ -1,24 +1,24 @@
-$theme-name = 'navy'
+$theme-name = 'ayu'
 
-$bg = #161923
-$fg = #bcbdd0
+$bg = #0f1419
+$fg = #c5c5c5
 
-$sidebar-bg = #282d3f
+$sidebar-bg = #14191f
 $sidebar-fg = #c8c9db
-$sidebar-non-existant = #505274
-$sidebar-active = #2b79a2
+$sidebar-non-existant = #5c6773
+$sidebar-active = #ffb454
 $sidebar-spacer = #2d334f
 
 $icons = #737480
 $icons-hover = #b7b9cc
 
-$links = #2b79a2
+$links = #0096cf
 
-$inline-code-color = #c5c8c6;
+$inline-code-color = #ffb454
 
-$theme-popup-bg = #161923
-$theme-popup-border = #737480
-$theme-hover = #282e40
+$theme-popup-bg = #14191f
+$theme-popup-border = #5c6773
+$theme-hover = #191f26
 
 $quote-bg = #262933
 $quote-border = lighten($quote-bg, 5%)
