--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -105,6 +105,7 @@
         vertical-align: middle;
         padding: 0.1em 0.3em;
         border-radius: 3px;
+        color: $inline-code-color;
     }
 
     a:hover > .hljs {
