--- a/src/theme/stylus/themes/light.styl
+++ b/src/theme/stylus/themes/light.styl
@@ -14,6 +14,8 @@ $icons-hover = #333333
 
 $links = #4183c4
 
+$inline-code-color = #6e6b5e;
+
 $theme-popup-bg = #fafafa
 $theme-popup-border = #cccccc
 $theme-hover = #e6e6e6
