--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -398,6 +398,7 @@ table thead td {
   vertical-align: middle;
   padding: 0.1em 0.3em;
   border-radius: 3px;
+  color: #6e6b5e;
 }
 .light a:hover > .hljs {
   text-decoration: underline;
@@ -516,6 +517,7 @@ table thead td {
   vertical-align: middle;
   padding: 0.1em 0.3em;
   border-radius: 3px;
+  color: #c5c8c6;
 }
 .coal a:hover > .hljs {
   text-decoration: underline;
@@ -634,6 +636,7 @@ table thead td {
   vertical-align: middle;
   padding: 0.1em 0.3em;
   border-radius: 3px;
+  color: #c5c8c6;
 }
 .navy a:hover > .hljs {
   text-decoration: underline;
@@ -752,6 +755,7 @@ table thead td {
   vertical-align: middle;
   padding: 0.1em 0.3em;
   border-radius: 3px;
+  color: #6e6b5e;
 }
 .rust a:hover > .hljs {
   text-decoration: underline;
@@ -773,6 +777,125 @@ table thead td {
   margin-left: 8px;
 }
 .rust pre > .result {
+  margin-top: 10px;
+}
+.ayu {
+  color: #c5c5c5;
+  background-color: #0f1419;
+/* Inline code */
+}
+.ayu .content .header:link,
+.ayu .content .header:visited {
+  color: #c5c5c5;
+  pointer: cursor;
+}
+.ayu .content .header:link:hover,
+.ayu .content .header:visited:hover {
+  text-decoration: none;
+}
+.ayu .sidebar {
+  background-color: #14191f;
+  color: #c8c9db;
+}
+.ayu .chapter li {
+  color: #5c6773;
+}
+.ayu .chapter li a {
+  color: #c8c9db;
+}
+.ayu .chapter li .active,
+.ayu .chapter li a:hover {
+/* Animate color change */
+  color: #ffb454;
+}
+.ayu .chapter .spacer {
+  background-color: #2d334f;
+}
+.ayu .menu-bar,
+.ayu .menu-bar:visited,
+.ayu .nav-chapters,
+.ayu .nav-chapters:visited,
+.ayu .mobile-nav-chapters,
+.ayu .mobile-nav-chapters:visited {
+  color: #737480;
+}
+.ayu .menu-bar i:hover,
+.ayu .nav-chapters:hover,
+.ayu .mobile-nav-chapters i:hover {
+  color: #b7b9cc;
+}
+.ayu .mobile-nav-chapters i:hover {
+  color: #c8c9db;
+}
+.ayu .mobile-nav-chapters {
+  background-color: #14191f;
+}
+.ayu .content a:link,
+.ayu a:visited,
+.ayu a > .hljs {
+  color: #0096cf;
+}
+.ayu .theme-popup {
+  color: #c5c5c5;
+  background: #14191f;
+  border: 1px solid #5c6773;
+}
+.ayu .theme-popup .theme:hover {
+  background-color: #191f26;
+}
+.ayu .theme-popup .default {
+  color: #737480;
+}
+.ayu blockquote {
+  margin: 20px 0;
+  padding: 0 20px;
+  color: #c5c5c5;
+  background-color: #262933;
+  border-top: 0.1em solid #2f333f;
+  border-bottom: 0.1em solid #2f333f;
+}
+.ayu table td {
+  border-color: #182028;
+}
+.ayu table tbody tr:nth-child(2n) {
+  background: #141b22;
+}
+.ayu table thead {
+  background: #324354;
+}
+.ayu table thead td {
+  border: none;
+}
+.ayu table thead tr {
+  border: 1px #324354 solid;
+}
+.ayu :not(pre) > .hljs {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 0.1em 0.3em;
+  border-radius: 3px;
+  color: #ffb454;
+}
+.ayu a:hover > .hljs {
+  text-decoration: underline;
+}
+.ayu pre {
+  position: relative;
+}
+.ayu pre > .buttons {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  color: #c8c9db;
+  cursor: pointer;
+}
+.ayu pre > .buttons :hover {
+  color: #ffb454;
+}
+.ayu pre > .buttons i {
+  margin-left: 8px;
+}
+.ayu pre > .result {
   margin-top: 10px;
 }
 @media only print {
