--- a/src/theme/stylus/themes/coal.styl
+++ b/src/theme/stylus/themes/coal.styl
@@ -14,6 +14,8 @@ $icons-hover = #b3c0cc
 
 $links = #2b79a2
 
+$inline-code-color = #c5c8c6;
+
 $theme-popup-bg = #141617
 $theme-popup-border = #43484d
 $theme-hover = #1f2124
