--- a/src/theme/stylus/themes/rust.styl
+++ b/src/theme/stylus/themes/rust.styl
@@ -14,6 +14,8 @@ $icons-hover = #262625
 
 $links = #2b79a2
 
+$inline-code-color = #6e6b5e;
+
 $theme-popup-bg = #e1e1db
 $theme-popup-border = #b38f6b
 $theme-hover = #99908a
