--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -117,6 +117,7 @@
 
         & > .buttons {
             position: absolute;
+            z-index: 100;
             right: 5px;
             top: 5px;
 
