--- a/src/theme/stylus/print.styl
+++ b/src/theme/stylus/print.styl
@@ -30,6 +30,10 @@
         -webkit-print-color-adjust: exact
     }
 
+    pre > .buttons {
+        z-index: 2;
+    }
+
     a, a:visited, a:active, a:hover {
         color: #4183c4
         text-decoration: none
