Fix the print title that was using the title from the last rendered chapter. Fixes #414

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -2,7 +2,7 @@
 <html lang="{{ language }}">
     <head>
         <meta charset="UTF-8">
-        <title>{{ chapter_title }} - {{ title }}</title>
+        <title>{{ chapter_title }} {{#if chapter_title }}-{{/if}} {{ title }}</title>
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="{{ description }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
