--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -38,7 +38,8 @@
     .nav-chapters,
     .nav-chapters:visited,
     .mobile-nav-chapters,
-    .mobile-nav-chapters:visited {
+    .mobile-nav-chapters:visited,
+    .menu-bar a i {
         color: $icons
     }
 
