--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -351,7 +351,8 @@ table thead td {
 .light .nav-chapters,
 .light .nav-chapters:visited,
 .light .mobile-nav-chapters,
-.light .mobile-nav-chapters:visited {
+.light .mobile-nav-chapters:visited,
+.light .menu-bar a i {
   color: #ccc;
 }
 .light .menu-bar i:hover,
@@ -471,7 +472,8 @@ table thead td {
 .coal .nav-chapters,
 .coal .nav-chapters:visited,
 .coal .mobile-nav-chapters,
-.coal .mobile-nav-chapters:visited {
+.coal .mobile-nav-chapters:visited,
+.coal .menu-bar a i {
   color: #43484d;
 }
 .coal .menu-bar i:hover,
@@ -591,7 +593,8 @@ table thead td {
 .navy .nav-chapters,
 .navy .nav-chapters:visited,
 .navy .mobile-nav-chapters,
-.navy .mobile-nav-chapters:visited {
+.navy .mobile-nav-chapters:visited,
+.navy .menu-bar a i {
   color: #737480;
 }
 .navy .menu-bar i:hover,
@@ -711,7 +714,8 @@ table thead td {
 .rust .nav-chapters,
 .rust .nav-chapters:visited,
 .rust .mobile-nav-chapters,
-.rust .mobile-nav-chapters:visited {
+.rust .mobile-nav-chapters:visited,
+.rust .menu-bar a i {
   color: #737480;
 }
 .rust .menu-bar i:hover,
@@ -831,7 +835,8 @@ table thead td {
 .ayu .nav-chapters,
 .ayu .nav-chapters:visited,
 .ayu .mobile-nav-chapters,
-.ayu .mobile-nav-chapters:visited {
+.ayu .mobile-nav-chapters:visited,
+.ayu .menu-bar a i {
   color: #737480;
 }
 .ayu .menu-bar i:hover,
