Fix code snippet font size a little smaller in FF

--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -5,6 +5,7 @@ body {
 }
 body {
   margin: 0;
+  font-size: 1rem;
 }
 code {
   font-family: "Source Code Pro", Consolas, "Ubuntu Mono", Menlo, "DejaVu Sans Mono", monospace, monospace;
