Fix styling regression on print media - chromium
Forces 0px left padding on print view even if sidebar is visible

--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -931,7 +931,7 @@ table thead td {
     left: 0;
     overflow-y: initial;
   }
-  .page-wrapper {
+  #page-wrapper.page-wrapper {
     padding-left: 0px;
   }
   #content {
