I forgot one theme, thanks budziq

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -60,7 +60,7 @@
     <body class="light">
         <!-- Set the theme before any content is loaded, prevents flash -->
         <script type="text/javascript">
-            var theme = store.get('theme');
+            var theme = store.get('mdbook-theme');
             if (theme === null || theme === undefined) { theme = 'light'; }
             $('body').removeClass().addClass(theme);
         </script>
