--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -48,6 +48,14 @@
             }
         </script>
 
+        <!-- Fetch elasticlunr.js from CDN but have a local fallback -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/elasticlunr/0.9.6/elasticlunr.min.js"></script>
+        <script>
+            if (typeof elasticlunr == 'undefined') {
+                document.write(unescape("%3Cscript src='elasticlunr.min.js'%3E%3C/script%3E"));
+            }
+        </script>
+
         <!-- Fetch store.js from local - TODO add CDN when 2.x.x is available on cdnjs -->
         <script src="store.js"></script>
 
@@ -68,6 +76,11 @@
         </script>
 
         <div id="sidebar" class="sidebar">
+            <div id="searchresults-outer" class="searchresults-outer">
+                <div class="searchresults-header" id="searchresults-header"></div>
+                <ul id="searchresults">
+                </ul>
+            </div>
             {{#toc}}{{/toc}}
         </div>
 
@@ -78,6 +91,8 @@
                     <div class="left-buttons">
                         <i id="sidebar-toggle" class="fa fa-bars" title="Toggle sidebar"></i>
                         <i id="theme-toggle" class="fa fa-paint-brush" title="Change theme"></i>
+                        <input type="search" id="searchbar" name="searchbar" placeholder="Search this book ...">
+                        <i id="search-go" class="fa fa-search" title="Search!"></i>
                     </div>
 
                     <h1 class="menu-title">{{ book_title }}</h1>
@@ -138,7 +153,7 @@
         <script>
             var localAddrs = ["localhost", "127.0.0.1", ""];
 
-            // make sure we don't activate google analytics if the developer is 
+            // make sure we don't activate google analytics if the developer is
             // inspecting the book locally...
             if (localAddrs.indexOf(document.location.hostname) === -1) {
                 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
