tooltips for previous/next chapter links

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -95,13 +95,13 @@
 
                 <!-- Mobile navigation buttons -->
                 {{#previous}}
-                    <a rel="prev" href="{{link}}" class="mobile-nav-chapters previous">
+                    <a rel="prev" href="{{link}}" class="mobile-nav-chapters previous" title="Previous chapter">
                         <i class="fa fa-angle-left"></i>
                     </a>
                 {{/previous}}
 
                 {{#next}}
-                    <a rel="next" href="{{link}}" class="mobile-nav-chapters next">
+                    <a rel="next" href="{{link}}" class="mobile-nav-chapters next" title="Next chapter">
                         <i class="fa fa-angle-right"></i>
                     </a>
                 {{/next}}
