can run tests of code block

--- a/src/theme/stylus/general.styl
+++ b/src/theme/stylus/general.styl
@@ -29,6 +29,10 @@ code {
     display: none;
 }
 
+.test-button.hidden {
+    display: none;
+}
+
 h2, h3 { margin-top: 2.5em }
 h4, h5 { margin-top: 2em }
 
