--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -94,18 +94,27 @@
                     {{{ content }}}
                 </div>
 
-                <!-- Mobile navigation buttons -->
-                {{#previous}}
-                    <a rel="prev" href="{{link}}" class="mobile-nav-chapters previous" title="Previous chapter">
-                        <i class="fa fa-angle-left"></i>
-                    </a>
-                {{/previous}}
+                <!--
+                Constrain the space between buttons on small screen so the total
+                width of the buttons group will not exceed the main content
+                above.
+                -->
+                <div class="nav-wrapper">
+                    <!-- Mobile navigation buttons -->
+                    {{#previous}}
+                        <a rel="prev" href="{{link}}" class="mobile-nav-chapters previous" title="Previous chapter">
+                            <i class="fa fa-angle-left"></i>
+                        </a>
+                    {{/previous}}
 
-                {{#next}}
-                    <a rel="next" href="{{link}}" class="mobile-nav-chapters next" title="Next chapter">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
-                {{/next}}
+                    {{#next}}
+                        <a rel="next" href="{{link}}" class="mobile-nav-chapters next" title="Next chapter">
+                            <i class="fa fa-angle-right"></i>
+                        </a>
+                    {{/next}}
+
+                    <div style="clear: both"></div>
+                </div>
 
             </div>
 
@@ -139,7 +148,7 @@
         <script>
             var localAddrs = ["localhost", "127.0.0.1", ""];
 
-            // make sure we don't activate google analytics if the developer is 
+            // make sure we don't activate google analytics if the developer is
             // inspecting the book locally...
             if (localAddrs.indexOf(document.location.hostname) === -1) {
                 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
