Refactored the Renderer trait to not use MDBook and moved livereload to the template

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -139,8 +139,22 @@
             }
         </script>
 
+        {{#if livereload}}
         <!-- Livereload script (if served using the cli tool) -->
-        {{{livereload}}}
+        <script type="text/javascript">
+            var socket = new WebSocket("{{{livereload}}}");
+            socket.onmessage = function (event) {
+                if (event.data === "reload") {
+                    socket.close();
+                    location.reload(true); // force reload from server (not from cache)
+                }
+            };
+
+            window.onbeforeunload = function() {
+                socket.close();
+            }
+        </script>
+        {{/if}}
 
         {{#if google_analytics}}
         <!-- Google Analytics Tag -->
