--- a/src/theme/stylus/menu.styl
+++ b/src/theme/stylus/menu.styl
@@ -2,7 +2,7 @@
     position: relative
     height: 50px
 
-    i {
+    i, .icon-button {
         position: relative
         margin: 0 10px
         z-index: 10
