fix(theme/index): Use nav element for Table of Content

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -68,9 +68,9 @@
             $("html").addClass("sidebar-" + sidebar);
         </script>
 
-        <div id="sidebar" class="sidebar">
+        <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             {{#toc}}{{/toc}}
-        </div>
+        </nav>
 
         <div id="page-wrapper" class="page-wrapper">
 
