fix(theme/index): Wrap content inside main tag
The main tag helps users skip additional content on the page.

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -103,7 +103,9 @@
                 </script>
 
                 <div id="content" class="content">
-                    {{{ content }}}
+                    <main>
+                        {{{ content }}}
+                    </main>
 
                     <div class="nav-wrapper">
                         <!-- Mobile navigation buttons -->
